# screenshot-to-text

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yaml  publish_testpypi.yaml  tests.yaml
src/screenshot_to_text/: __init__.py  app.py  cli.py  config.py  constants.py  errors.py  helpers.py
src/screenshot_to_text/data/: supported_platforms.yaml
src/screenshot_to_text/models/: dict_root_model.py  s2tconfig.py  supported_platforms.py  tool_type.py
tests/: test_config.py  test_tools.py
