[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend="setuptools.build_meta"

[project]
name = "screenshot-to-text"
dynamic = ["version"]
requires-python = ">=3.11"
description= "Cross platform screenshot to text CLI"
readme = "README.md"
authors = [{name="Alphan Aksoyoglu", email="alphanbe@gmail.com"}]
keywords = ["screenshot", "ocr", "clipboard", "screenshot to text"]
dependencies = [
    "opencv-python-headless>=4.13.0.92",
    "platformdirs>=4.5.1",
    "pydantic>=2.12.5",
    "pypdf>=6.7.2",
    "pyyaml>=6.0.3",
    "tomli-w>=1.2.0",
    "typer>=0.22.0",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Utilities",
]

license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.scripts]
screenshot-to-text="screenshot_to_text.cli:app"
s2t="screenshot_to_text.cli:app"

[project.urls]
Repository = "https://github.com/Alphan-Aksoyoglu/screenshot-to-text.git"
Issues = "https://github.com/Alphan-Aksoyoglu/screenshot-to-text/issues"

[tool.setuptools.packages.find]
where=["src"]
[tool.setuptools.package-data]
screenshot_to_text = ["data/*.yaml"]

[tool.setuptools.dynamic]
version = {attr = "screenshot_to_text.__version__.__version__"}

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.0",
]

[tool.ruff]
line-length = 160
